src/main/java/com/sqlanalyzer/parser/hive/HiveSQLParser.java
// Generated from /Users/yangxin/project/java-project/sql-analyzer/src/main/java/com/sqlanalyzer/parser/hive/HiveSQL.g4 by ANTLR 4.13.2
package com.sqlanalyzer.parser.hive;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class HiveSQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CREATE=1, TABLE=2, IF=3, NOT=4, EXISTS=5, PARTITIONED=6, BY=7, CLUSTERED=8, 
		SORTED=9, INTO=10, BUCKETS=11, STORED=12, AS=13, LOCATION=14, TBLPROPERTIES=15, 
		SELECT=16, FROM=17, WHERE=18, GROUP=19, HAVING=20, ORDER=21, LIMIT=22, 
		JOIN=23, INNER=24, LEFT=25, RIGHT=26, FULL=27, OUTER=28, CROSS=29, ON=30, 
		USING=31, AND=32, OR=33, IN=34, LIKE=35, ASC=36, DESC=37, COMMENT=38, 
		STRING=39, INT=40, BIGINT=41, DOUBLE=42, DATE=43, TIMESTAMP=44, BOOLEAN=45, 
		DECIMAL=46, VARCHAR=47, TEXTFILE=48, SEQUENCEFILE=49, ORC=50, PARQUET=51, 
		AVRO=52, RCFILE=53, JSONFILE=54, TRUE=55, FALSE=56, NULL=57, EQUAL=58, 
		NOT_EQUAL=59, LESS_THAN=60, LESS_THAN_EQUAL=61, GREATER_THAN=62, GREATER_THAN_EQUAL=63, 
		DOT=64, COMMA=65, SEMICOLON=66, LPAREN=67, RPAREN=68, STAR=69, IDENTIFIER=70, 
		BACK_QUOTED_IDENTIFIER=71, STRING_LITERAL=72, DATE_LITERAL=73, NUMBER=74, 
		WS=75, LINE_COMMENT=76, MULTILINE_COMMENT=77;
	public static final int
		RULE_parse = 0, RULE_sqlStatements = 1, RULE_sqlStatement = 2, RULE_createTableStatement = 3, 
		RULE_columnDefinition = 4, RULE_columnSortSpec = 5, RULE_tableProperties = 6, 
		RULE_tableProperty = 7, RULE_selectStatement = 8, RULE_selectElements = 9, 
		RULE_selectElement = 10, RULE_fromClause = 11, RULE_whereClause = 12, 
		RULE_groupByClause = 13, RULE_havingClause = 14, RULE_orderByClause = 15, 
		RULE_limitClause = 16, RULE_orderByExpression = 17, RULE_joinPart = 18, 
		RULE_tableSource = 19, RULE_expression = 20, RULE_primary = 21, RULE_function = 22, 
		RULE_functionArg = 23, RULE_dataType = 24, RULE_fileFormat = 25, RULE_comparisonOperator = 26, 
		RULE_identifier = 27, RULE_tableName = 28, RULE_alias = 29, RULE_literal = 30, 
		RULE_star = 31, RULE_groupByItem = 32;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse", "sqlStatements", "sqlStatement", "createTableStatement", "columnDefinition", 
			"columnSortSpec", "tableProperties", "tableProperty", "selectStatement", 
			"selectElements", "selectElement", "fromClause", "whereClause", "groupByClause", 
			"havingClause", "orderByClause", "limitClause", "orderByExpression", 
			"joinPart", "tableSource", "expression", "primary", "function", "functionArg", 
			"dataType", "fileFormat", "comparisonOperator", "identifier", "tableName", 
			"alias", "literal", "star", "groupByItem"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'CREATE'", "'TABLE'", "'IF'", "'NOT'", "'EXISTS'", "'PARTITIONED'", 
			"'BY'", "'CLUSTERED'", "'SORTED'", "'INTO'", "'BUCKETS'", "'STORED'", 
			"'AS'", "'LOCATION'", "'TBLPROPERTIES'", "'SELECT'", "'FROM'", "'WHERE'", 
			"'GROUP'", "'HAVING'", "'ORDER'", "'LIMIT'", "'JOIN'", "'INNER'", "'LEFT'", 
			"'RIGHT'", "'FULL'", "'OUTER'", "'CROSS'", "'ON'", "'USING'", "'AND'", 
			"'OR'", "'IN'", "'LIKE'", "'ASC'", "'DESC'", "'COMMENT'", "'STRING'", 
			"'INT'", "'BIGINT'", "'DOUBLE'", "'DATE'", "'TIMESTAMP'", "'BOOLEAN'", 
			"'DECIMAL'", "'VARCHAR'", "'TEXTFILE'", "'SEQUENCEFILE'", "'ORC'", "'PARQUET'", 
			"'AVRO'", "'RCFILE'", "'JSONFILE'", "'TRUE'", "'FALSE'", "'NULL'", "'='", 
			null, "'<'", "'<='", "'>'", "'>='", "'.'", "','", "';'", "'('", "')'", 
			"'*'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CREATE", "TABLE", "IF", "NOT", "EXISTS", "PARTITIONED", "BY", 
			"CLUSTERED", "SORTED", "INTO", "BUCKETS", "STORED", "AS", "LOCATION", 
			"TBLPROPERTIES", "SELECT", "FROM", "WHERE", "GROUP", "HAVING", "ORDER", 
			"LIMIT", "JOIN", "INNER", "LEFT", "RIGHT", "FULL", "OUTER", "CROSS", 
			"ON", "USING", "AND", "OR", "IN", "LIKE", "ASC", "DESC", "COMMENT", "STRING", 
			"INT", "BIGINT", "DOUBLE", "DATE", "TIMESTAMP", "BOOLEAN", "DECIMAL", 
			"VARCHAR", "TEXTFILE", "SEQUENCEFILE", "ORC", "PARQUET", "AVRO", "RCFILE", 
			"JSONFILE", "TRUE", "FALSE", "NULL", "EQUAL", "NOT_EQUAL", "LESS_THAN", 
			"LESS_THAN_EQUAL", "GREATER_THAN", "GREATER_THAN_EQUAL", "DOT", "COMMA", 
			"SEMICOLON", "LPAREN", "RPAREN", "STAR", "IDENTIFIER", "BACK_QUOTED_IDENTIFIER", 
			"STRING_LITERAL", "DATE_LITERAL", "NUMBER", "WS", "LINE_COMMENT", "MULTILINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "HiveSQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HiveSQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParseContext extends ParserRuleContext {
		public SqlStatementsContext sqlStatements() {
			return getRuleContext(SqlStatementsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(HiveSQLParser.EOF, 0); }
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HiveSQLListener ) ((HiveSQLListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HiveSQLListener ) ((HiveSQLListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HiveSQLVisitor ) return ((HiveSQLVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			sqlStatements();
			setState(67);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SqlStatementsContext extends ParserRuleContext {
		public List<SqlStatementContext> sqlStatement() {
			return getRuleContexts(SqlStatementContext.class);
		}
		public SqlStatementContext sqlStatement(int i) {
			return getRuleContext(SqlStatementContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(HiveSQLParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(HiveSQLParser.SEMICOLON, i);
		}
		public SqlStatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sqlStatements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HiveSQLListener ) ((HiveSQLListener)listener).enterSqlStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HiveSQLListener ) ((HiveSQLListener)listener).exitSqlStatements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HiveSQLVisitor ) return ((HiveSQLVisitor<? extends T>)visitor).visitSqlStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SqlStatementsContext sqlStatements() throws RecognitionException {
		SqlStatementsContext _localctx = new SqlStatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sqlStatements);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			sqlStatement();
			setState(74);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(70);
					match(SEMICOLON);
					setState(71);
					sqlStatement();
					}
					} 
				}
				setState(76);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMICOLON) {
				{
				setState(77);
				match(SEMICOLON);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SqlStatementContext extends ParserRuleContext {
		public CreateTableStatementContext createTableStatement() {
			return getRuleContext(CreateTableStatementContext.class,0);
		}
		public SelectStatementContext selectStatement() {
			return getRuleContext(SelectStatementContext.class,0);
		}
		public SqlStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sqlStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HiveSQLListener ) ((HiveSQLListener)listener).enterSqlStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HiveSQLListener ) ((HiveSQLListener)listener).exitSqlStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HiveSQLVisitor ) return ((HiveSQLVisitor<? extends T>)visitor).visitSqlStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SqlStatementContext sqlStatement() throws RecognitionException {
		SqlStatementContext _localctx = new SqlStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sqlStatement);
		try {
			setState(82);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CREATE:
				enterOuterAlt(_localctx, 1);
				{
				setState(80);
				createTableStatement();
				}
				break;
			case SELECT:
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				selectStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CreateTableStatementContext extends ParserRuleContext {
		public TerminalNode CREATE() { return getToken(HiveSQLParser.CREATE, 0); }
		public TerminalNode TABLE() { return getToken(HiveSQLParser.TABLE, 0); }
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public List<TerminalNode> LPAREN() { return getTokens(HiveSQLParser.LPAREN); }
		public TerminalNode LPAREN(int i) {
			return getToken(HiveSQLParser.LPAREN, i);
		}
		public List<ColumnDefinitionContext> columnDefinition() {
			return getRuleContexts(ColumnDefinitionContext.class);
		}
		public ColumnDefinitionContext columnDefinition(int i) {
			return getRuleContext(ColumnDefinitionContext.class,i);
		}
		public List<TerminalNode> RPAREN() { return getTokens(HiveSQLParser.RPAREN); }
		public TerminalNode RPAREN(int i) {
			return getToken(HiveSQLParser.RPAREN, i);
		}
		public TerminalNode IF() { return getToken(HiveSQLParser.IF, 0); }
		public TerminalNode NOT() { return getToken(HiveSQLParser.NOT, 0); }
		public TerminalNode EXISTS() { return getToken(HiveSQLParser.EXISTS, 0); }
		public List<TerminalNode> COMMA() { return getTokens(HiveSQLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(HiveSQLParser.COMMA, i);
		}
		public TerminalNode COMMENT() { return getToken(HiveSQLParser.COMMENT, 0); }
		public List<TerminalNode> STRING_LITERAL() { return getTokens(HiveSQLParser.STRING_LITERAL); }
		public TerminalNode STRING_LITERAL(int i) {
			return getToken(HiveSQLParser.STRING_LITERAL, i);
		}
		public TerminalNode PARTITIONED() { return getToken(HiveSQLParser.PARTITIONED, 0); }
		public List<TerminalNode> BY() { return getTokens(HiveSQLParser.BY); }
		public TerminalNode BY(int i) {
			return getToken(HiveSQLParser.BY, i);
		}
		public TerminalNode CLUSTERED() { return getToken(HiveSQLParser.CLUSTERED, 0); }
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public TerminalNode INTO() { return getToken(HiveSQLParser.INTO, 0); }
		public TerminalNode NUMBER() { return getToken(HiveSQLParser.NUMBER, 0); }
		public TerminalNode BUCKETS() { return getToken(HiveSQLParser.BUCKETS, 0); }
		public TerminalNode STORED() { return getToken(HiveSQLParser.STORED, 0); }
		public TerminalNode AS() { return getToken(HiveSQLParser.AS, 0); }
		public FileFormatContext fileFormat() {
			return getRuleContext(FileFormatContext.class,0);
		}
		public TerminalNode LOCATION() { return getToken(HiveSQLParser.LOCATION, 0); }
		public TerminalNode TBLPROPERTIES() { return getToken(HiveSQLParser.TBLPROPERTIES, 0); }
		public TablePropertiesContext tableProperties() {
			return getRuleContext(TablePropertiesContext.class,0);
		}
		public TerminalNode SORTED() { return getToken(HiveSQLParser.SORTED, 0); }
		public List<ColumnSortSpecContext> columnSortSpec() {
			return getRuleContexts(ColumnSortSpecContext.class);
		}
		public ColumnSortSpecContext columnSortSpec(int i) {
			return getRuleContext(ColumnSortSpecContext.class,i);
		}
		public CreateTableStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createTableStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HiveSQLListener ) ((HiveSQLListener)listener).enterCreateTableStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HiveSQLListener ) ((HiveSQLListener)listener).exitCreateTableStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HiveSQLVisitor ) return ((HiveSQLVisitor<? extends T>)visitor).visitCreateTableStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateTableStatementContext createTableStatement() throws RecognitionException {
		CreateTableStatementContext _localctx = new CreateTableStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_createTableStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(CREATE);
			setState(85);
			match(TABLE);
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IF) {
				{
				setState(86);
				match(IF);
				setState(87);
				match(NOT);
				setState(88);
				match(EXISTS);
				}
			}

			setState(91);
			tableName();
			setState(92);
			match(LPAREN);
			setState(93);
			columnDefinition();
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(94);
				match(COMMA);
				setState(95);
				columnDefinition();
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(101);
			match(RPAREN);
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMENT) {
				{
				setState(102);
				match(COMMENT);
				setState(103);
				match(STRING_LITERAL);
				}
			}

			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PARTITIONED) {
				{
				setState(106);
				match(PARTITIONED);
				setState(107);
				match(BY);
				setState(108);
				match(LPAREN);
				setState(109);
				columnDefinition();
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(110);
					match(COMMA);
					setState(111);
					columnDefinition();
					}
					}
					setState(116);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(117);
				match(RPAREN);
				}
			}

			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CLUSTERED) {
				{
				setState(121);
				match(CLUSTERED);
				setState(122);
				match(BY);
				setState(123);
				match(LPAREN);
				setState(124);
				identifier();
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(125);
					match(COMMA);
					setState(126);
					identifier();
					}
					}
					setState(131);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(132);
				match(RPAREN);
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SORTED) {
					{
					setState(133);
					match(SORTED);
					setState(134);
					match(BY);
					setState(135);
					match(LPAREN);
					setState(136);
					columnSortSpec();
					setState(141);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COMMA) {
						{
						{
						setState(137);
						match(COMMA);
						setState(138);
						columnSortSpec();
						}
						}
						setState(143);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(144);
					match(RPAREN);
					}
				}

				setState(148);
				match(INTO);
				setState(149);
				match(NUMBER);
				setState(150);
				match(BUCKETS);
				}
			}

			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==STORED) {
				{
				setState(154);
				match(STORED);
				setState(155);
				match(AS);
				setState(156);
				fileFormat();
				}
			}

			setState(161);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LOCATION) {
				{
				setState(159);
				match(LOCATION);
				setState(160);
				match(STRING_LITERAL);
				}
			}

			setState(168);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TBLPROPERTIES) {
				{
				setState(163);
				match(TBLPROPERTIES);
				setState(164);
				match(LPAREN);
				setState(165);
				tableProperties();
				setState(166);
				match(RPAREN);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ColumnDefinitionContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public TerminalNode COMMENT() { return getToken(HiveSQLParser.COMMENT, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(HiveSQLParser.STRING_LITERAL, 0); }
		public ColumnDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_columnDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HiveSQLListener ) ((HiveSQLListener)listener).enterColumnDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HiveSQLListener ) ((HiveSQLListener)listener).exitColumnDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HiveSQLVisitor ) return ((HiveSQLVisitor<? extends T>)visitor).visitColumnDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ColumnDefinitionContext columnDefinition() throws RecognitionException {
		ColumnDefinitionContext _localctx = new ColumnDefinitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_columnDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			identifier();
			setState(171);
			dataType();
			setState(174);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMENT) {
				{
				setState(172);
				match(COMMENT);
				setState(173);
				match(STRING_LITERAL);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ColumnSortSpecContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode ASC() { return getToken(HiveSQLParser.ASC, 0); }
		public TerminalNode DESC() { return getToken(HiveSQLParser.DESC, 0); }
		public ColumnSortSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_columnSortSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HiveSQLListener ) ((HiveSQLListener)listener).enterColumnSortSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HiveSQLListener ) ((HiveSQLListener)listener).exitColumnSortSpec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HiveSQLVisitor ) return ((HiveSQLVisitor<? extends T>)visitor).visitColumnSortSpec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ColumnSortSpecContext columnSortSpec() throws RecognitionException {
		ColumnSortSpecContext _localctx = new ColumnSortSpecContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_columnSortSpec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			identifier();
			setState(178);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASC || _la==DESC) {
				{
				setState(177);
				_la = _input.LA(1);
				if ( !(_la==ASC || _la==DESC) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
